--- a/about.html
+++ b/about.html
@@ -21,12 +21,21 @@
           <span></span>
         </button>
         <div class="nav-left">
-          <nav>
-            <a href="shop.html">Shop</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="blog.html">Blog</a>
-          </nav>
+         <nav>
+  <div class="dropdown">
+    <a href="shop.html" class="dropbtn">Shop</a>
+    <div class="dropdown-content">
+      <a href="#">Kitchen</a>
+      <a href="#">Home Decor</a>
+      <a href="#">Jewellery</a>
+      <a href="#">Others</a>
+    </div>
+  </div>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+  <a href="artisans.html">Artisans</a>
+</nav>
+
         </div>
         <div class="nav-center">
           <a href="index.html" class="logo">artisan alley</a>
