--- a/artisans.html
+++ b/artisans.html
@@ -19,11 +19,20 @@
       </button>
       <div class="nav-left">
         <nav>
-          <a href="shop.html">Shop</a>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
-          <a href="artisans.html" class="active">Artisans</a>
-        </nav>
+  <div class="dropdown">
+    <a href="shop.html" class="dropbtn">Shop</a>
+    <div class="dropdown-content">
+      <a href="#">Kitchen</a>
+      <a href="#">Home Decor</a>
+      <a href="#">Jewellery</a>
+      <a href="#">Others</a>
+    </div>
+  </div>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+  <a href="artisans.html">Artisans</a>
+</nav>
+
       </div>
       <div class="nav-center">
         <a href="index.html" class="logo">artisan alley</a>
@@ -48,19 +57,19 @@
       <div class="artisan-list">
         <!-- Artisan Card Example -->
         <div class="artisan-card">
-          <img src="https://via.placeholder.com/200x200?text=Artisan+1" alt="Artisan 1" />
+          <img src="images/Artisan1.jpg" alt="Artisan 1" />
           <h3>Maria Lopez</h3>
           <p>Specializes in hand-thrown pottery with a modern twist. Maria’s work blends tradition with contemporary design.</p>
         </div>
 
         <div class="artisan-card">
-          <img src="https://via.placeholder.com/200x200?text=Artisan+2" alt="Artisan 2" />
+          <img src="images/Artisan2.jpg" alt="Artisan 2" />
           <h3>James Nguyen</h3>
           <p>A master woodworker crafting beautiful furniture and home decor from sustainably sourced wood.</p>
         </div>
 
         <div class="artisan-card">
-          <img src="https://via.placeholder.com/200x200?text=Artisan+3" alt="Artisan 3" />
+          <img src="images/Artisan3.jpg" alt="Artisan 3" />
           <h3>Amina Hassan</h3>
           <p>Creates vibrant handwoven textiles inspired by her cultural heritage and travels.</p>
         </div>
