--- a/artisans.html
+++ b/artisans.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Artisans - Artisan Alley</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <title>Contact - Artisan Alley</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <div class="navbar">
-      <button class="hamburger" aria-label="Open navigation">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <div class="nav-left">
-        <nav>
+    <header>
+      <div class="navbar">
+        <button class="hamburger" aria-label="Open navigation">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+        <div class="nav-left">
+          <nav>
   <div class="dropdown">
     <a href="shop.html" class="dropbtn">Shop</a>
     <div class="dropdown-content">
@@ -33,83 +32,82 @@
   <a href="artisans.html">Artisans</a>
 </nav>
 
-      </div>
-      <div class="nav-center">
-        <a href="index.html" class="logo">artisan alley</a>
-      </div>
-      <div class="nav-right">
-        <button class="nav-action login">Login / Sign up</button>
-        <button class="nav-search" aria-label="Search">
-          <i class="fas fa-search"></i>
-        </button>
-      </div>
-    </div>
-  </header>
-
-  <!-- Main Content -->
-  <main>
-    <section class="page-section">
-      <h1>Meet Our Artisans</h1>
-      <p>
-        At Artisan Alley, we proudly collaborate with talented artisans who pour their heart and soul into every handcrafted piece. Get to know the makers behind your favorite treasures!
-      </p>
-
-      <div class="artisan-list">
-        <!-- Artisan Card Example -->
-        <div class="artisan-card">
-          <img src="images/Artisan1.jpg" alt="Artisan 1" />
-          <h3>Maria Lopez</h3>
-          <p>Specializes in hand-thrown pottery with a modern twist. Maria’s work blends tradition with contemporary design.</p>
         </div>
-
-        <div class="artisan-card">
-          <img src="images/Artisan2.jpg" alt="Artisan 2" />
-          <h3>James Nguyen</h3>
-          <p>A master woodworker crafting beautiful furniture and home decor from sustainably sourced wood.</p>
+        <div class="nav-center">
+          <a href="index.html" class="logo">artisan alley</a>
         </div>
-
-        <div class="artisan-card">
-          <img src="images/Artisan3.jpg" alt="Artisan 3" />
-          <h3>Amina Hassan</h3>
-          <p>Creates vibrant handwoven textiles inspired by her cultural heritage and travels.</p>
+        <div class="nav-right">
+          <button class="nav-action login">Login / Sign up</button>
+          <button class="nav-search" aria-label="Search">
+            <i class="fas fa-search"></i>
+          </button>
         </div>
-
-        <!-- Add more artisan cards as needed -->
       </div>
-    </section>
-  </main>
+    </header>
 
-  <!-- Footer -->
-  <footer>
-    <div class="footer-links">
-      <a href="shop.html">Shop</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="artisans.html">Artisans</a>
-      <a href="#">Support</a>
-      <a href="#">FAQs</a>
-      <a href="#">Shipping & Returns</a>
-      <a href="#">Privacy Policy</a>
-      <a href="#">Terms & Conditions</a>
-    </div>
-    <div class="footer-social">
-      <span>Stay Connected</span>
-      <a href="https://twitter.com/" target="_blank" class="social-icon" aria-label="Twitter">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="https://instagram.com/" target="_blank" class="social-icon" aria-label="Instagram">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="https://facebook.com/" target="_blank" class="social-icon" aria-label="Facebook">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-    </div>
-    <div class="footer-bottom">
-      <span>Craft . Create . Connect</span><br />
-      <span>&copy; 2025 Artisan Alley. All Rights Reserved.</span>
-    </div>
-  </footer>
+    <main>
+      <section class="page-section">
+        <h1>Contact Us</h1>
+        <p>
+          Have questions or feedback? Reach out to us at <a href="mailto:info@artisan-alley.com">info@artisan-alley.com</a> or use the form below.
+        </p>
+       <main>
+  <section class="page-section contact-form-section">
+    <h1>Contact Us</h1>
+    <p>
+      We would love to hear from you! Please fill out the form below and we will get back to you as soon as possible.
+    </p>
 
-  <script src="main.js"></script>
+    <form class="contact-form" action="https://formspree.io/f/your-form-id" method="POST" novalidate>
+      <label for="name">Name<span aria-hidden="true">*</span></label>
+      <input type="text" id="name" name="name" placeholder="Your full name" required>
+
+      <label for="email">Email<span aria-hidden="true">*</span></label>
+      <input type="email" id="email" name="_replyto" placeholder="your.email@example.com" required>
+
+      <label for="subject">Subject</label>
+      <input type="text" id="subject" name="subject" placeholder="Subject (optional)">
+
+      <label for="message">Message<span aria-hidden="true">*</span></label>
+      <textarea id="message" name="message" rows="5" placeholder="Write your message here..." required></textarea>
+
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+</main>
+
+      </section>
+    </main>
+
+    <footer>
+        <div class="footer-links">
+            <a href="shop.html">Shop</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="blog.html">Blog</a>
+            <a href="#">Support</a>
+            <a href="#">FAQs</a>
+            <a href="#">Shipping & Returns</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+        </div>
+        <div class="footer-social">
+            <span>Stay Connected</span>
+            <a href="https://twitter.com/" target="_blank" class="social-icon" aria-label="Twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://instagram.com/" target="_blank" class="social-icon" aria-label="Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://facebook.com/" target="_blank" class="social-icon" aria-label="Facebook">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+        </div>
+        <div class="footer-bottom">
+            <span>Craft . Create . Connect</span><br>
+            <span>&copy; 2025 Artisan Alley. All Rights Reserved.</span>
+        </div>
+    </footer>
+    <script src="main.js"></script>
 </body>
 </html>
